test_data/Json/Unexpected/Unserializable/InvalidModelType/SubmodelElementCollection/wrong.json.exception
Expected the model type 'SubmodelElementCollection', but got soReallyUtterlyInvalid at: modelType